<resources>
    <string name="app_name">Крестики-нолики</string>
    <string name="ai_move">Андроид думает..</string>
    <string name="hu_move">Ваш ход</string>
    <string name="btn_reset">Новая игра</string>
    <string name="you_win">"Вы победили!!!"</string>
    <string name="you_lose">Вы проиграли</string>
    <string name="draw">Ничья</string>
    <string name="btn_play_random_title">Неожиданная игра</string>
    <string name="btn_help_title">Помощь</string>
    <string name="btn_play_classic_title">Обычная игра</string>
    <string name="message_text">Ваш символ?</string>
    <string name="symb_x">X</string>
    <string name="symb_o">O</string>
    <string name="menu_id_reset">Обнулить счет</string>
    <string name="menu_id_options">Настройки</string>
    <string name="menu_id_quit">Выход</string>
    <string name="pref_sync">Анимация</string>
    <string name="pref_sync_summ">Включени анимации X и О</string>
    <string name="game_rule">Игроки по очереди ставят на свободные клетки поля 3х3 знаки (один всегда крестики, другой всегда нолики). Первый, выстроивший в ряд 3 своих фигуры по вертикали, горизонтали или диагонали, выигрывает. Первый ход делает игрок, ставящий крестики. В игре с элементами неожиданности периодически исчезают установленные знаки. </string>
    <string name="btn_close">ОК</string>
</resources>
